added section to index, changed Masters pic, changed font family, tested section divider, changed header color, added index.css

--- a/Main Files/mainstyles.css
+++ b/Main Files/mainstyles.css
@@ -15,14 +15,16 @@
     margin: 0;
     padding: 0;
     background-color: #1f1f1f;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   header {
-    background-color: black;
+    background-color: #1f1f1f;
     height: 10vh;
     padding-left: 5vw;
     padding-right: 5vw;
     border-bottom: 2px solid #ff3434;
+    margin-bottom: 0px;
   }
   
   header nav {
