--- a/Courses.css
+++ b/Courses.css
@@ -33,7 +33,8 @@ h1{
     color: white;
     text-align: center;
     padding:0.5em;
-    border: 1px solid white;
+    border: 2px solid #FF3434;
+    border-radius: 10px;
     margin: 1rem;
     display:grid;
     grid-template-rows: 37% 5% 25%;
