Fiexed the red word in the nav bar indicating which page the user is on

--- a/Main Files/mainstyles.css
+++ b/Main Files/mainstyles.css
@@ -283,7 +283,7 @@ form button {
 @media (min-width: 1201px) and (max-width: 1400px) {
 }
 
-#firstWord {
+#redword {
   color: var(--primary-color);
 }
 
