--- a/Enroll.css
+++ b/Enroll.css
@@ -4,7 +4,7 @@
     margin: 5vw auto;
     padding: 20px;
     background-color: black;
-    border: 1px solid #ff3434;
+    border: 1px solid var(--primary-color);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -12,13 +12,13 @@
 .form-container h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #ff3434;
+    color: var(--primary-color);
     font-size: 2rem;
 }
 
 .form-group {
     margin-bottom: 15px;
-    color: #ff3434;
+    color: var(--primary-color);
 }
 
 .form-group label {
@@ -26,6 +26,7 @@
     margin-bottom: 5px;
     font-weight: bold;
 }
+
 .form-group input,
 .form-group select,
 .form-group textarea {
