--- a/index.css
+++ b/index.css
@@ -1,40 +1,29 @@
 #index-title-section {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(Images/home_header.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  justify-content: center; /* Centers horizontally */
-  align-items: center;
-  text-align: center; /* Centers vertically */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+              url(Images/home_header.jpg) center/cover no-repeat;
+  text-align: center;
   height: 65vh;
-  margin-top: 0px;
+  margin-top: 0;
 }
-
 
 h2{
     font-size: 4.5rem;
     color: white;
     text-align: center;
     padding-top: 10%;
-    margin: 0px;
+    margin: 0;
 }
 
 #index-title-section button {
   display: inline-block;
   font-size: 1.5rem;
   color: var(--primary-color);
-  text-align: center;
   background-color: var(--background-color);
   padding: 10px;
   margin: 5px;
-  border: 0px;
   border-radius: 50px;
 }
 
 #index-learn-section .section-divider{
     width: 100vw;
-    margin: 0;
-    padding: 0;
 }
