--- a/Enroll.css
+++ b/Enroll.css
@@ -38,7 +38,7 @@
 }
 
 .form-group-button {
-    text-align: center; /* Center-aligns child elements such as the button */
+    text-align: center;
 }
 
 .form-group-button button{
