--- a/Courses.css
+++ b/Courses.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-    color:white;
+  color: white;
 }
 
 #courhead {
@@ -21,23 +21,23 @@ h1 {
   margin: auto;
 }
 
-.card h3{
-    color: var(--primary-color);
-    margin-bottom: 1rem;
+.card h3 {
+  color: var(--primary-color);
+  margin-bottom: 1rem;
 }
 
-.card{
-    width: 20.5rem;
-    height: 32rem;
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding:0.5em;
-    border: 2px solid var(--primary-color);
-    border-radius: 10px;
-    margin: 1rem;
-    display:grid;
-    grid-template-rows: 37% 5% 25%;
+.card {
+  width: 20.5rem;
+  height: 32rem;
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 0.5em;
+  border: 2px solid var(--primary-color);
+  border-radius: 10px;
+  margin: 1rem;
+  display: grid;
+  grid-template-rows: 37% 5% 25%;
 }
 
 .card p {
@@ -56,6 +56,7 @@ h1 {
   grid-template-rows: repeat(2, 1.5rem);
   column-gap: 2rem;
   margin-bottom: 4rem;
+  justify-content: center;
 }
 
 .price {
@@ -70,18 +71,19 @@ h1 {
   display: none;
 }
 
-.back{
-    margin-left: 20%;
-    margin-top: 2%;
+#back {
+  margin-left: 20%;
+  margin-top: 2%;
 }
 
 /* #region popup heading */
 
 #index-title-section {
+  display: flex;
   justify-content: center; /* Centers horizontally */
   align-items: center;
   text-align: center; /* Centers vertically */
-  height: 65vh;
+  height: 85vh;
   margin-top: 0px;
 }
 
@@ -89,37 +91,61 @@ h2 {
   font-size: 4.5rem;
   color: white;
   text-align: center;
-  padding-top: 10%;
   margin: 0px;
 }
 
 /* #endregion */
 
-#courseDetail{
-  color:white;
+#courseDetail {
+  color: white;
 }
 
-#courseDetail h3{
+#courseDetail h3 {
   font-size: 26px;
   color: var(--primary-color);
 }
 
-
-table, td{
-}
-
-.profilePhoto{
+.profilePhoto {
   border-radius: 50%;
   width: 150px;
   height: 150px;
 }
 
-.Modue{
+.Modue {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-template-rows: repeat(2,auto);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
 }
 
-.Modue h3{
+.Modue h3 {
   grid-row: 1;
+}
+
+.EnrollCard {
+  width: 20rem;
+  height: 70%;
+  background-color: #1f1f1f;
+  color: white;
+  padding: 2rem;
+  /*position: absolute;
+  top: 50%;
+  transform: translateY(-50%);*/
+}
+
+.EnrollCard h3{
+  font-size: 29px;
+  margin-top: 1rem;
+}
+
+.EnrollCard button{
+  width: 15rem;
+}
+
+.top{
+  font-size: 13px;
+}
+
+.bottom{
+  font-weight:400;
+  font-size: 23px;
 }
