Fixed enrollment card at top of courses

--- a/Courses.css
+++ b/Courses.css
@@ -123,7 +123,7 @@ h2 {
 
 .EnrollCard {
   width: 20rem;
-  height: 70%;
+  height: 21rem;
   background-color: #1f1f1f;
   color: white;
   padding: 2rem;
