Hamburger Menu Change

--- a/Main Files/mainstyles.css
+++ b/Main Files/mainstyles.css
@@ -2,7 +2,9 @@
   --search_radius: 5rem;
   --search_trans_dur: 0.3s;
   --btn-color: #ff3434;
-  --btn-width: 3rem;
+  --btn-width: 15rem;
+  --btn-height: 1.5rem;
+  --btn-animation-width: 3rem;
   --transparent-color: rgba(0, 0, 0, 0);
   --background-color: #1f1f1f;
   --primary-color: #ff3434;
@@ -14,8 +16,7 @@
   box-sizing: border-box;
 }
 
-button{
-  padding: 10px 20px;
+button {
   border: 0px;
   border-radius: 50px;
   font-size: 1.2rem;
@@ -43,7 +44,7 @@ header {
   top: 0;
 }
 
-.navbar{
+.navbar {
   width: 50%;
   margin: auto;
 }
@@ -93,7 +94,8 @@ header nav ul li a:hover {
 /* Searchbar */
 nav form {
   position: relative;
-  width: 15rem;
+  width: var(--btn-width);
+  height: var(--btn-height);
   background: var(--btn-color);
   border-radius: var(--search_radius);
   border: 2px solid var(--primary-color);
@@ -116,7 +118,6 @@ nav input[type="search"] {
   background-color: black;
   color: white;
   position: relative;
-
   transition: width var(--search_trans_dur),
     border-radius var(--search_trans_dur);
 }
@@ -127,15 +128,13 @@ nav button {
   position: absolute;
   top: 0;
   right: 0;
-  width: var(--btn-width);
+  width: var(--btn-animation-width);
   height: 100%;
   font-weight: bold;
   background: var(--btn-color);
   border-radius: 0 var(--search_radius) var(--search_radius) 0;
   color: white;
-
   z-index: 2; /* Ensures button is above input */
-
   transition: opacity var(--search_trans_dur),
     visibility var(--search_trans_dur), background-color var(--search_trans_dur);
 }
@@ -147,7 +146,7 @@ nav ::placeholder {
 
 nav input:not(:placeholder-shown) {
   border-radius: var(--search_radius) 0 0 var(--search_radius);
-  width: calc(100% - var(--btn-width));
+  width: calc(100% - var(--btn-animation-width));
 }
 
 nav input:not(:placeholder-shown) + button {
@@ -171,6 +170,15 @@ form button {
 /* #endregion */
 
 @media (max-width: 480px) {
+  :root {
+    --btn-height: 3rem;
+  }
+
+  nav input,
+  nav button {
+    font-size: large;
+  }
+
   header {
     display: block;
     height: auto;
@@ -178,15 +186,15 @@ form button {
   }
 
   .navbar {
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
     justify-content: space-evenly;
   }
 
   header h1 {
     font-size: x-large;
     width: fit-content;
-    margin: 0; 
+    margin: 0;
   }
 
   header nav {
@@ -197,9 +205,9 @@ form button {
   header nav ul {
     flex-direction: column;
     background: linear-gradient(
-      to bottom, /* Direction of the gradient */
-      var(--background-color), /* Starting color */
-      rgba(54, 48, 48, 0.5) /* End color*/
+      to bottom,
+      /* Direction of the gradient */ var(--background-color),
+      /* Starting color */ rgba(54, 48, 48, 0.5) /* End color*/
     );
   }
 
@@ -207,7 +215,7 @@ form button {
     padding: 1% 0;
     width: 100%;
     border-top: 2px solid var(--primary-color);
-  }  
+  }
 
   header nav form {
     display: none;
@@ -223,6 +231,26 @@ form button {
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
+  :root {
+    --btn-height: 3rem;
+  }
+
+  nav form {
+    position: relative;
+    width: var(--btn-width);
+    height: var(--btn-height);
+    background: var(--btn-color);
+    border-radius: var(--search_radius);
+    border: 2px solid var(--primary-color);
+    margin-left: 1%;
+    margin-top: 2.5% !important; 
+  }
+
+  nav input,
+  nav button {
+    font-size: large;
+  }
+
   header {
     display: block;
     height: auto;
@@ -230,15 +258,15 @@ form button {
   }
 
   .navbar {
-    display: flex; 
-    align-items: center; 
+    display: flex;
+    align-items: center;
     justify-content: space-evenly;
   }
 
   header h1 {
     font-size: x-large;
     width: fit-content;
-    margin: 0; 
+    margin: 0;
   }
 
   header nav {
@@ -249,20 +277,24 @@ form button {
   header nav ul {
     flex-direction: column;
     background: linear-gradient(
-      to bottom, /* Direction of the gradient */
-      var(--background-color), /* Starting color */
-      rgba(54, 48, 48, 0.5) /* End color*/
+      to bottom,
+      /* Direction of the gradient */ var(--background-color),
+      /* Starting color */ rgba(54, 48, 48, 0.5) /* End color*/
     );
   }
 
   header nav ul li {
+    font-size: xx-large;
     padding: 1% 0;
     width: 100%;
-    border-top: 2px solid var(--primary-color);
-  }  
+  }
+
+  header ul li:last-of-type {
+    height: 100vh;
+  }
 
   header nav form {
-    display: none;
+    margin: auto;
   }
 
   .hamburger-btn {
@@ -275,8 +307,6 @@ form button {
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-
-
 }
 
 @media (min-width: 1025px) and (max-width: 1200px) {
@@ -288,7 +318,6 @@ form button {
 #redword {
   color: var(--primary-color);
 }
-
 
 /* #region Footer */
 footer {
@@ -327,7 +356,7 @@ footer {
 .Courseblock {
   display: flex;
   align-items: flex-start;
-  gap: 1%; 
+  gap: 1%;
 }
 
 .CourseInfo {
@@ -345,7 +374,6 @@ footer {
 }
 
 .CourseInfo th {
-
   color: #000000;
   padding: 5px;
 }
@@ -357,8 +385,6 @@ footer {
   padding: 5px;
 }
 
-
-
 .CourseDrop {
   margin-top: 20px;
 }
@@ -367,7 +393,6 @@ footer {
   display: none;
   border: 1px solid #dededf;
   padding: 10px;
-
 }
 
 .CourseDrop-content table {
@@ -390,8 +415,8 @@ footer {
   display: flex;
 }
 
-.SubOptInfo{
-  display:inline-block;
+.SubOptInfo {
+  display: inline-block;
   margin-right: 10%;
 }
 /* #endregion */
