--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(Images/home_header.jpg) center/cover no-repeat;
   text-align: center;
-  height: 50vh;
+  height: max(55vh,350px);
   margin-top: 0;
 }
 
